<resources>
    <string name="excavator_rtk_net">Network RTK</string>
    <string name="excavator_rtk_ntrip">Ntrip network RTK</string>
    <string name="excavator_rtk_bs">Base station RTK</string>

    <string name="excavator_bs_pairing_external">External Radio Pairing</string>
    <string name="excavator_bs_pairing_internal">Internal Radio Pairing</string>
    <string name="excavator_ntrip_login">Login</string>
    <string name="excavator_pairing_btn">Pairing</string>
    <string name="toast_pair_suc">Pairing successfully!</string>
    <string name="toast_pair_failed">Pairing failed!</string>
    <string name="waiting">Waiting…</string>
    <string name="excavator_base_code">Please enter the pairing code of fixed base station</string>
    <string name="network_disconnect">Please connect the network!</string>

    <!--Ntrip-->
    <string name="ntrip_connect">Connect</string>
    <string name="ntrip_disconnect">Disconnect</string>
    <string name="ntrip_host_port_empty">Address or port is empty!</string>
    <string name="error_source_node_is_empty">Source node is empty!</string>
    <string name="error_account_or_password_is_empty">Account or password is empty!</string>
    <string name="ntrip_get_source">Acquiring source…</string>
    <string name="ntrip_get_source_success">Acquiring source successfully!</string>
    <string name="ntrip_get_source_failed">Acquiring source failed!</string>
    <string name="ntrip_link_to_node">Connecting……</string>
    <string name="ntrip_link_to_node_success">Connect successfully!</string>
    <string name="ntrip_link_to_node_disconnected">Currently disconnected!</string>
    <string name="ntrip_layout_host">Address:</string>
    <string name="ntrip_layout_port">Port:</string>
    <string name="ntrip_layout_source_node">Source node:</string>
    <string name="ntrip_layout_get_source">Source list</string>
    <string name="ntrip_layout_account">Account:</string>
    <string name="ntrip_layout_password">Password:</string>

    <string name="cancel">Cancel</string>
    <string name="operation_success">Operate successfully!</string>
    <string name="operation_failed">Operate failed!</string>

    <string name="error_not_support_network_rtk">Network RTK mode is not supported in current region!</string>
    <string name="toast_pairing_success_wait_location">Pairing completed, getting location…</string>
<!--    <string name="buy_more_time">延长有效期</string>-->
<!--    <string name="cnn_apply">连接使用</string>-->
<!--    <string name="text_ntrip">Ntrip 网络</string>-->
<!--    <string name="tv_rtk">基站 RTK</string>-->
<!--    <string name="text_change_account">切换账户</string>-->
<!--    <string name="text_input_frequency_code">请输入对频码</string>-->
<!--    <string name="text_ntrip_detail">Ntrip 网络账户详情</string>-->
<!--    <string name="text_input_company_name">请输入公司名称</string>-->
<!--    <string name="text_input_ntrip_name">请输入账户名称</string>-->
<!--    <string name="text_input_ntrip_pwd">请输入密码</string>-->
<!--    <string name="text_add_ntrip_account">新增账户</string>-->
<!--    <string name="text_ntrip_save">保存</string>-->
<!--    <string name="text_ntrip_list_choice_title">选择账户</string>-->
<!--    <string name="text_ntrip_name_tip">账户名称</string>-->
<!--    <string name="text_ntrip_company_name_tip">公司名称</string>-->
<!--    <string name="text_input">请输入</string>-->
<!--    <string name="network_exception">网络异常</string>-->
<!--    <string name="tetx_rtk_expire_date_over">已过期，网络无法使用</string>-->
<!--    <string name="tetx_rtk_expire_date">有限期截止：%s</string>-->
<!--    <string name="msg_sn_not_bind_rtk">当前SN号未开通，请联系当地经销商或拨打客服热线。</string>-->
    <string name="text_ntrip_company_name_tip">corporate name</string>
    <string name="text_input_ntrip_name">Please enter the account name</string>
    <string name="msg_sn_not_bind_rtk">At present, Sn number is not opened. Please contact the local dealer or call the customer service hotline.</string>
    <string name="tetx_rtk_expire_date_over">Expired, network unavailable</string>
    <string name="tetx_rtk_expire_date">Expiration date:% s</string>
    <string name="text_input">Please enter</string>
    <string name="text_add_ntrip_account">New account</string>
    <string name="text_ntrip_save">preservation</string>
    <string name="text_ntrip_list_choice_title">Select account</string>
    <string name="buy_more_time">Extension of validity</string>
    <string name="text_input_company_name">Please enter company name</string>
    <string name="text_ntrip_detail">Ntrip network account details</string>
    <string name="text_ntrip_name_tip">title of account</string>
    <string name="text_change_account">Switch accounts</string>
    <string name="text_input_frequency_code">Please enter the frequency code</string>
    <string name="text_input_ntrip_pwd">Please input a password</string>
    <string name="cnn_apply">connect using</string>
    <string name="network_exception">Network exception</string>
</resources>