<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rl_rtk_net"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:background="@drawable/bg_switch_gradient_dark_fill_r6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_net"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="46dp"
                android:src="@drawable/selector_rtk_net" />


            <LinearLayout
                android:id="@+id/layout_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/iv_net"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_net"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excavator_rtk_net"
                    android:textColor="@color/color_rtk_net"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/tv_net2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="#80ffffff"
                    android:textSize="18sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="39dp"
                android:background="@drawable/bg_6_white"
                android:paddingStart="23dp"
                android:paddingTop="12dp"
                android:paddingEnd="23dp"
                android:paddingBottom="12dp"
                android:text="@string/buy_more_time"
                android:textColor="#ff333333"
                android:textSize="21sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rtk_ntrip"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_switch_gradient_dark_fill_r6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_rtk_net">

            <ImageView
                android:id="@+id/iv_ntrip"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="46dp"
                android:src="@drawable/selector_ntrip" />

            <LinearLayout
                android:id="@+id/layout_center2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/iv_ntrip"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ntirp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excavator_rtk_ntrip"
                    android:textColor="@color/color_rtk_net"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/tv_ntirp2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="#80ffffff"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_end2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="39dp"
                android:background="@drawable/bg_6_white"
                android:paddingStart="23dp"
                android:paddingTop="12dp"
                android:paddingEnd="23dp"
                android:paddingBottom="12dp"
                android:text="@string/cnn_apply"
                android:textColor="#ff333333"
                android:textSize="21sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_rtk_station"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_switch_gradient_dark_fill_r6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_rtk_ntrip">

            <ImageView
                android:id="@+id/iv_rtk"
                android:layout_width="47dp"
                android:layout_height="47dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="46dp"
                android:src="@drawable/selector_rtk" />

            <LinearLayout
                android:id="@+id/layout_center3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/iv_rtk"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_rtk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excavator_rtk_bs"
                    android:textColor="@color/color_rtk_net"
                    android:textSize="21sp" />

                <TextView
                    android:id="@+id/tv_rtk2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="#80ffffff"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_end3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="39dp"
                android:background="@drawable/bg_6_white"
                android:paddingStart="23dp"
                android:paddingTop="12dp"
                android:paddingEnd="23dp"
                android:paddingBottom="12dp"
                android:text="对频"
                android:textColor="#ff333333"
                android:textSize="21sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>